about page update

--- a/Resources/Interfaces/MainWindow.xib
+++ b/Resources/Interfaces/MainWindow.xib
@@ -110,7 +110,9 @@ dGl2ZSwgZnJvbSBodHRwOi8vYWxsc2VlaW5nLWkuY29tL0FTSUhUVFBSZXF1ZXN0Ly4KClhNTCBwYXJz
 aW5nIGxpYnJhcnkgVG91Y2hYTUwgwqkgSm9uYXRoYW4gV2lnaHQsIGZyb20gaHR0cDovL2NvZGUuZ29v
 Z2xlLmNvbS9wL3RvdWNoY29kZS8uCgpSZWd1bGFyIGV4cHJlc3Npb24gcGFyc2luZyBwcm92aWRlZCBi
 eSBSZWdleEtpdExpdGUgQ29weXJpZ2h0IMKpIDIwMDgtMjAwOSwgSm9obiBFbmdlbGhhcnQsIGZyb20g
-aHR0cDovL3JlZ2V4a2l0LnNvdXJjZWZvcmdlLm5ldC8uA</string>
+aHR0cDovL3JlZ2V4a2l0LnNvdXJjZWZvcmdlLm5ldC8uCgpDb25maWd1cmF0aW9uIHBhbmVsIGNvZGUg
+bXlTZXR0aW5ncyBjb3B5cmlnaHQgwqkgMjAwOSwgMjAwOSBLw6VyZSBNb3JzdMO4bCwgZnJvbSBodHRw
+Oi8vYml0YnVja2V0Lm9yZy9rYXJlbW9yc3RvbC9teXNldHRpbmdzLy4</string>
 										<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 											<int key="IBUIAutocapitalizationType">2</int>
 										</object>
